--- a/VpdbAgent/packages.config
+++ b/VpdbAgent/packages.config
@@ -50,36 +50,67 @@
   <package id="Humanizer.Core.zh-Hans" version="2.2.0" targetFramework="net452" />
   <package id="Humanizer.Core.zh-Hant" version="2.2.0" targetFramework="net452" />
   <package id="ini-parser" version="3.4.0" targetFramework="net452" />
-  <package id="JetBrains.Annotations" version="10.4.0" targetFramework="net452" />
-  <package id="LiteDB" version="3.1.1" targetFramework="net452" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net452" />
+  <package id="LiteDB" version="3.1.0" targetFramework="net452" />
   <package id="LoadingIndicators.WPF" version="0.0.1" targetFramework="net45" />
-  <package id="MahApps.Metro" version="1.4.0" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.5.0" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
-  <package id="Mindscape.Raygun4Net" version="5.5.1" targetFramework="net452" />
+  <package id="Mindscape.Raygun4Net" version="5.5.3" targetFramework="net452" />
   <package id="Mono.Cecil" version="0.9.6.4" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="NLog" version="4.4.1" targetFramework="net452" />
-  <package id="OpenMcdf" version="2.1.3.34720" targetFramework="net452" />
-  <package id="PusherClient" version="0.5.0" targetFramework="net452" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="NLog" version="4.4.12" targetFramework="net452" />
+  <package id="OpenMcdf" version="2.1.3.34730" targetFramework="net452" />
+  <package id="PusherClient" version="0.5.1" targetFramework="net452" />
   <package id="reactiveui" version="7.4.0" targetFramework="net452" />
   <package id="reactiveui-core" version="7.4.0" targetFramework="net452" />
-  <package id="Refit" version="3.1.0" targetFramework="net452" />
+  <package id="refit" version="3.0.1" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net45" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
-  <package id="SharpCompress" version="0.16.1" targetFramework="net452" />
-  <package id="Splat" version="2.0.0" targetFramework="net45" />
-  <package id="SQLitePCL.raw_basic" version="0.9.0-pre8" targetFramework="net452" />
-  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.7" targetFramework="net452" />
-  <package id="SQLitePCLRaw.core" version="1.1.7" targetFramework="net452" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.7" targetFramework="net452" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.7" targetFramework="net452" />
-  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.7" targetFramework="net452" />
-  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.7" targetFramework="net452" />
-  <package id="squirrel.windows" version="1.7.6" targetFramework="net452" />
-  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.12" targetFramework="net452" />
-  <package id="WebSocket4Net" version="0.15.0-beta9" targetFramework="net452" />
+  <package id="SharpCompress" version="0.17.1" targetFramework="net452" />
+  <package id="Splat" version="1.6.2" targetFramework="net45" />
+  <package id="SQLitePCL.raw_basic" version="0.8.6" targetFramework="net452" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="1.1.9" targetFramework="net452" />
+  <package id="SQLitePCLRaw.core" version="1.1.9" targetFramework="net452" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.9" targetFramework="net452" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.9" targetFramework="net452" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.9" targetFramework="net452" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.9" targetFramework="net452" />
+  <package id="squirrel.windows" version="1.7.8" targetFramework="net452" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.9.0" targetFramework="net452" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net452" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net452" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net452" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO" version="4.3.0" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net452" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net452" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.1" targetFramework="net452" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net452" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net452" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net452" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net452" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
+  <package id="WebSocket4Net" version="0.15.1" targetFramework="net452" />
 </packages>
